<resources>
    <string name="app_name">Fitness App</string>
    <string name="welcome_back">Welcome back, Alex</string>
    <string name="nutrition">Nutrition</string>
    <string name="recovery">Recovery</string>
    <string name="save">Save</string>
    <string name="next">Next</string>

    Beginning screen
    <string name="gender">Gender:</string>
    <string name="choose_gender">Choose gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter age:</string>
    <string name="weight">Weight:</string>
    <string name="enter_weight">Enter weight:</string>
    <string name="height">Height:</string>
    <string name="enter_height">Enter height:</string>
    <string name="objective">Objective:</string>
    <string name="choose_objective">Choose objective:</string>
    <string name="objective_muscle_mass">Muscle mass</string>
    <string name="objective_fat_loss">Fat loss</string>
    <string name="available_time">Available time:</string>
    <string name="two_days">2 days/week</string>
    <string name="three_days">3 days/week</string>
    <string name="four_days">4 days/week</string>
    <string name="five_days">5 days/week</string>
    <string name="available_equipment">Available Equipment:</string>
    <string name="no_equipment">No equipment</string>
    <string name="pull_up_bar">Pull-up Bar</string>
    <string name="dumbbells">Dumbbells</string>
    <string name="barbell">Barbell</string>
    <string name="gym">Gym</string>

    Training
    <string name="training">Training</string>
    <string name="start_workout">Start workout</string>
    <string name="today_workout">Today\'s workout:</string>
    <string name="start">Start</string>
    <string name="continue_workout">Continue</string>
    <string name="rest_between_sets">Rest between sets:</string>
    <string name="rest_between_exercises">Rest between exercises:</string>
    <string name="go">Go</string>

    Nutrition
    <string name="calories_today">Calories today:&#160;</string>
    <string name="next_meal">Next meal:</string>

    Recovery
    <string name="sleep">Sleep</string>
    <string name="start_sleep">Start sleep</string>
    <string name="stop_sleep">Stop sleep</string>
    <string name="sleep_rating">Sleep rating</string>
    <string name="wake_up_time_question">When did you wake up?</string>
    <string name="how_much_time_question">How much did you sleep?</string>
    <string name="last_night">Last night:&#160;</string>
    <string name="wake_up_hour">Wake up hour:&#160;</string>

    Sleep ratings
    <string name="very_bad">Very bad</string>
    <string name="bad">Bad</string>
    <string name="decent">Decent</string>
    <string name="good">Good</string>
    <string name="very_good">Very good</string>
    <string name="rating_available_time">Available after one week of usage</string>

    Exercises
    <string name="push_up">Push-up</string>
    <string name="pull_up">Pull-up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>