<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvailableTimeFragment">

    <TextView
        android:id="@+id/tv_available_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/available_time"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_two_days"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/button_selection_color"
        android:text="@string/two_days"
        app:layout_constraintEnd_toEndOf="@+id/tv_available_time"
        app:layout_constraintStart_toStartOf="@+id/tv_available_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_available_time" />

    <Button
        android:id="@+id/button_three_days"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/three_days"
        android:backgroundTint="@color/button_selection_color"
        app:layout_constraintEnd_toEndOf="@+id/button_two_days"
        app:layout_constraintStart_toStartOf="@+id/button_two_days"
        app:layout_constraintTop_toBottomOf="@+id/button_two_days" />

    <Button
        android:id="@+id/button_four_days"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/four_days"
        android:backgroundTint="@color/button_selection_color"
        app:layout_constraintEnd_toEndOf="@+id/button_three_days"
        app:layout_constraintStart_toStartOf="@+id/button_three_days"
        app:layout_constraintTop_toBottomOf="@+id/button_three_days" />

    <Button
        android:id="@+id/button_five_days"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/five_days"
        android:backgroundTint="@color/button_selection_color"
        app:layout_constraintEnd_toEndOf="@+id/button_four_days"
        app:layout_constraintStart_toStartOf="@+id/button_four_days"
        app:layout_constraintTop_toBottomOf="@+id/button_four_days" />

</androidx.constraintlayout.widget.ConstraintLayout>