<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObjectivesFragment">

    <TextView
        android:id="@+id/tv_objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/choose_objective"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_muscle_mass"
        android:layout_width="145dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:text="@string/objective_muscle_mass"
        android:backgroundTint="@color/button_selection_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_objective" />

    <Button
        android:id="@+id/button_fat_loss"
        android:layout_width="145dp"
        android:layout_height="180dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:text="@string/objective_fat_loss"
        android:backgroundTint="@color/button_selection_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_objective" />

</androidx.constraintlayout.widget.ConstraintLayout>