<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenderFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_choose_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_male"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="76dp"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_gender" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_male"
                app:layout_constraintStart_toStartOf="@+id/tv_male"
                app:layout_constraintTop_toBottomOf="@+id/tv_male"
                app:layout_constraintVertical_bias="0.145" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_female"
                app:layout_constraintStart_toStartOf="@+id/tv_female"
                app:layout_constraintTop_toBottomOf="@+id/tv_female"
                app:layout_constraintVertical_bias="0.145" />

            <TextView
                android:id="@+id/tv_female"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RadioGroup>

</FrameLayout>